--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish&display=swap"
+      rel="stylesheet"
+    />
 
-	<link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.svg">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.svg" />
 
-  <title>PianoRoll</title>
-</head>
-<body>
-  <nav class="navbar">
-    <div class="logo-container">
-      <img src="assets/white.svg" alt="Logo">
+    <title>PianoRoll</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo-container">
+        <img src="assets/white.svg" alt="Logo" />
+      </div>
+    </nav>
+
+    <h1>Welcome to PianoRoll frontend coding challenge!</h1>
+
+    <div id="buttonContainer">
+      <button id="loadCSV">Load Piano Rolls!</button>
     </div>
-  </nav>
+    <div class="item-container">
+      <div id="selectedItem" class="hide-item"></div>
+      <!-- <div id="canvas"> -->
+      <div id="pianoRollContainer"></div>
+      <!-- </div> -->
+    </div>
 
-  <h1> Welcome to PianoRoll frontend coding challenge!</h1>
-
-  <div id="buttonContainer">
-    <button id="loadCSV">Load Piano Rolls!</button>
-  </div>
-
-  <div id="pianoRollContainer"></div>
-
-  <script src="app.js" type="module"></script>
-</body>
+    <script src="app.js" type="module"></script>
+    <script src="canvas.js" type="module"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
